--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,80 +1,56 @@
-<head>
-  <!-- Bootstrap CSS CDN -->
-  <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-    integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
-    crossorigin="anonymous"
-  />
-  <!-- Our Custom CSS -->
+<div class="wrapper">
+  <!-- Sidebar  -->
+  <nav class="sticky-top" id="sidebar">
+    <div class="sidebar-header">
+      <h3 class="text-white">
+        Master <br />
+        Board
+      </h3>
+      <strong>MS</strong>
+    </div>
 
-  <!-- Font Awesome JS -->
-  <script
-    defer
-    src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
-    integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    defer
-    src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
-    integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
-    crossorigin="anonymous"
-  ></script>
-</head>
+    <ul class="list-unstyled components">
+      <li >
+        <a routerLinkActive="active" [routerLink]="['']">
+          <!-- <i class="fas fa-home"></i> -->
+          🏠 Home
+        </a>
+      </li>
+      <li>
+        <a routerLinkActive="active" [routerLink]="['/requestcourse']">
+          <!-- <i class="fas fa-briefcase"></i> -->
+          📚 Request Course
+        </a>
+        <a href="">
+          <!-- <i class="fas fa-copy"></i> -->
+          🎯 Your Board
+        </a>
+      </li>
+      <!-- <li>
+        <a>
+          <i class="fas fa-image"></i>
+          Portfolio
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fas fa-question"></i>
+          FAQ
+        </a>
+      </li> -->
+      <li>
+        <a href="#">
+          <!-- <i class="fas fa-paper-plane"></i> -->
+          💌 Contact
+        </a>
+      </li>
+    </ul>
 
-<body>
-  <div class="wrapper">
-    <!-- Sidebar  -->
-    <nav id="sidebar">
-      <div class="sidebar-header">
-        <h3 class="text-white">
-          Master <br />
-          Board
-        </h3>
-        <strong>MS</strong>
-      </div>
-
-      <ul class="list-unstyled components">
-        <li class="active">
-          <a href="">
-            <i class="fas fa-home"></i>
-            Home
-          </a>
-        </li>
+    <!-- <ul class="list-unstyled CTAs">
         <li>
-          <a href="#">
-            <i class="fas fa-briefcase"></i>
-            About
-          </a>
-          <a href="">
-            <i class="fas fa-copy"></i>
-            Pages
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-image"></i>
-            Portfolio
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-question"></i>
-            FAQ
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-paper-plane"></i>
-            Contact
-          </a>
-        </li>
-      </ul>
-
-      <ul class="list-unstyled CTAs">
-        <li>
-          <a (click)="loginwithGoogle()" class="download">Signin with Google</a>
+          <a (click)="loginwithGoogle()" class="text-dark bg-white"
+            >Signin with Google</a
+          >
         </li>
         <li>
           <a
@@ -83,123 +59,129 @@
             >Back to article</a
           >
         </li>
-      </ul>
+      </ul> -->
+  </nav>
+
+  <!-- Page Content  -->
+  <div id="content">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <div class="container-fluid">
+        <button type="button" id="sidebarCollapse" class="btn btn-info">
+          <i class="fas fa-align-left"></i>
+          <span class="ml-2">Toggle Sidebar</span>
+        </button>
+
+        <button
+          class="btn btn-dark d-inline-block d-lg-none ml-auto"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fas fa-align-justify"></i>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="nav navbar-nav ml-auto">
+            <!-- <li class="nav-item">
+                <a class="nav-link">
+                  <span class="h5 wave">👋</span>
+                  <span class="h5 text-gradient text-dark"
+                    >Hey! {{ user.displayName }}</span
+                  >
+                </a>
+              </li> -->
+            <li *ngIf="!user" class="nav-item">
+              <a class="nav-link">
+                <button
+                  type="button"
+                  class="btn bg-gradient-danger"
+                  (click)="loginwithGoogle()"
+                >
+                  <i class="fab fa-google mr-1"></i>
+                  <span>Signin</span>
+                </button>
+              </a>
+            </li>
+            <li *ngIf="user" class="nav-item">
+              <div class="nav-link">
+                <span class="h5 wave">👋</span>
+                <span class="h5 text-gradient text-dark"
+                  >Hey! {{ user.displayName }}</span
+                >
+
+                <button
+                  type="button"
+                  class="btn bg-gradient-secondary ml-1"
+                  (click)="logOut()"
+                >
+                  <i class="fas fa-sign-out-alt mr-1"></i>
+                  <span>Logout</span>
+                </button>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
-    <!-- Page Content  -->
-    <div id="content">
-      <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <div class="container-fluid">
-          <button type="button" id="sidebarCollapse" class="btn btn-info">
-            <i class="fas fa-align-left mr-2"></i>
-            <span>Toggle Sidebar</span>
-          </button>
-          <button
-            class="btn btn-dark d-inline-block d-lg-none ml-auto"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="fas fa-align-justify"></i>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Page</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Page</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Page</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Page</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
-      <h2>Collapsible Sidebar Using Bootstrap 4</h2>
-      <p>
+    <h2> <router-outlet></router-outlet> </h2>
+    <!-- <p>
         {{ user.uid }}
         {{ user.email }}
         {{ user.displayName }}
         {{ user.photoURL }}
         {{ user.emailVerified }}
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
+      </p> -->
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.
+    </p>
 
-      <div class="line"></div>
+    <div class="line"></div>
 
-      <h2>Lorem Ipsum Dolor</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.
+    </p>
 
-      <div class="line"></div>
+    <div class="line"></div>
 
-      <h2>Lorem Ipsum Dolor</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.
+    </p>
 
-      <div class="line"></div>
+    <div class="line"></div>
 
-      <h3>Lorem Ipsum Dolor</h3>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
-    </div>
+    <h3>Lorem Ipsum Dolor</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.
+    </p>
   </div>
-
-  <!-- jQuery CDN - Slim version (=without AJAX) -->
-  <script
-    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"
-  ></script>
-  <!-- Popper.JS -->
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-    integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-    crossorigin="anonymous"
-  ></script>
-  <!-- Bootstrap JS -->
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-    integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-    crossorigin="anonymous"
-  ></script>
-</body>
+</div>
