--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
-@import "~soft-ui-design-system/assets/css/nucleo-icons.css";
-@import "~soft-ui-design-system/assets/css/soft-design-system.min.css";
+
+@import "../assets/css/soft-design-system.min.css";
 
 /*
     DEMO STYLE
