--- a/src/app/components/request-course/request-course.component.html
+++ b/src/app/components/request-course/request-course.component.html
@@ -1,8 +1,6 @@
-<div class="container">
-  <!-- (ngSubmit)="onSubmit(formData)" -->
+<div class="container" *ngIf="user else userNotLoggedIn">
   <form #formData="ngForm" (ngSubmit)="onSubmit(formData)">
     <div class="row justify-content-center">
-      <!-- #formData="ngForm" (ngSubmit)="onSubmit(formData)" -->
       <div class="form-group col-md-4 col-md-offset-5 align-center">
         <label for="courseUrl" class="form-control-label"
           >Enter Course URL</label
@@ -30,3 +28,9 @@
     </div>
   </form>
 </div> -->
+<ng-template #userNotLoggedIn>
+  <div class="container">
+    
+  </div>
+
+</ng-template>
