--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,1 +1,5 @@
-@import "../../../assets/css/soft-design-system.min"
+@import "../../../assets/css/soft-design-system.min";
+
+a{
+    cursor: pointer;
+}
