--- a/src/app/components/request-course/request-course.component.html
+++ b/src/app/components/request-course/request-course.component.html
@@ -6,7 +6,7 @@
           >Enter Course URL</label
         >
         <input class="form-control" type="text" name="courseUrl" ngModel />
-        <button type="submit" class="btn bg-gradient-secondary m-1">
+        <button type="submit" class="btn bg-gradient-secondary mt-1">
           Submit
         </button>
       </div>
