--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <ul class="list-unstyled components">
-      <li >
+      <li>
         <a routerLinkActive="active" [routerLink]="['']">
           <!-- <i class="fas fa-home"></i> -->
           🏠 Home
@@ -21,7 +21,7 @@
           <!-- <i class="fas fa-briefcase"></i> -->
           📚 Request Course
         </a>
-        <a href="" >
+        <a routerLinkActive="active" [routerLink]="['/board']">
           <!-- <i class="fas fa-copy"></i> -->
           🎯 Your Board
         </a>
@@ -39,7 +39,7 @@
         </a>
       </li> -->
       <li>
-        <a href="#">
+        <a data-bs-toggle="modal" data-bs-target="#modal-form">
           <!-- <i class="fas fa-paper-plane"></i> -->
           💌 Contact
         </a>
@@ -127,4 +127,92 @@
       </div>
     </nav>
     <router-outlet></router-outlet>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <!-- <button
+      type="button"
+      class="btn btn-block btn-default mb-3"
+      data-bs-toggle="modal"
+      data-bs-target="#modal-form"
+    >
+      Form
+    </button> -->
+  <div
+    class="modal fade"
+    id="modal-form"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="modal-form"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-body p-0">
+          <div class="card card-plain">
+            <div class="card-header pb-0 text-left">
+              <h3 class="font-weight-bolder text-info text-gradient">
+                Welcome back
+              </h3>
+              <p class="mb-0">Enter your email and password to sign in</p>
+            </div>
+            <div class="card-body">
+              <form role="form text-left">
+                <label>Email</label>
+                <div class="input-group mb-3">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Email"
+                    aria-label="Email"
+                    aria-describedby="email-addon"
+                  />
+                </div>
+                <label>Password</label>
+                <div class="input-group mb-3">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Password"
+                    aria-label="Password"
+                    aria-describedby="password-addon"
+                  />
+                </div>
+                <div class="form-check form-switch">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="rememberMe"
+                    checked=""
+                  />
+                  <label class="form-check-label" for="rememberMe"
+                    >Remember me</label
+                  >
+                </div>
+                <div class="text-center">
+                  <button
+                    type="button"
+                    class="btn btn-round bg-gradient-info btn-lg w-100 mt-4 mb-0"
+                  >
+                    Sign in
+                  </button>
+                </div>
+              </form>
+            </div>
+            <div class="card-footer text-center pt-0 px-lg-2 px-1">
+              <p class="mb-4 text-sm mx-auto">
+                Don't have an account?
+                <a
+                  href="javascript:;"
+                  class="text-info text-gradient font-weight-bold"
+                  >Sign up</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
