--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -153,9 +153,11 @@
           <div class="card card-plain">
             <div class="card-header pb-0 text-left">
               <h3 class="font-weight-bolder text-info text-gradient">
-                Welcome back
+                How can we help?
               </h3>
-              <p class="mb-0">Enter your email and password to sign in</p>
+              <p class="mb-0">
+                Enter your message, We will revert you back asap!
+              </p>
             </div>
             <div class="card-body">
               <form role="form text-left">
@@ -169,46 +171,24 @@
                     aria-describedby="email-addon"
                   />
                 </div>
-                <label>Password</label>
+                <label>Message</label>
                 <div class="input-group mb-3">
-                  <input
-                    type="email"
+                  <textarea
                     class="form-control"
-                    placeholder="Password"
-                    aria-label="Password"
-                    aria-describedby="password-addon"
-                  />
+                    aria-label="With textarea"
+                    placeholder="Write your message..."
+                  ></textarea>
                 </div>
-                <div class="form-check form-switch">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="rememberMe"
-                    checked=""
-                  />
-                  <label class="form-check-label" for="rememberMe"
-                    >Remember me</label
-                  >
-                </div>
+
                 <div class="text-center">
                   <button
                     type="button"
                     class="btn btn-round bg-gradient-info btn-lg w-100 mt-4 mb-0"
                   >
-                    Sign in
+                    Submit
                   </button>
                 </div>
               </form>
-            </div>
-            <div class="card-footer text-center pt-0 px-lg-2 px-1">
-              <p class="mb-4 text-sm mx-auto">
-                Don't have an account?
-                <a
-                  href="javascript:;"
-                  class="text-info text-gradient font-weight-bold"
-                  >Sign up</a
-                >
-              </p>
             </div>
           </div>
         </div>
