added request component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -147,6 +147,10 @@ i, span {
     color: #fff;
     background: #6d7fcc;
 }
+.active{
+    color: #fff;
+    background: #6d7fcc;
+}
 
 
 a[data-toggle="collapse"] {
