--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="wrapper">
-  <!-- Sidebar  -->
   <nav class="sticky-top" id="sidebar">
     <div class="sidebar-header">
       <h3 class="text-white">
@@ -11,61 +10,26 @@
 
     <ul class="list-unstyled components">
       <li>
-        <a routerLinkActive="active" [routerLink]="['']">
-          <!-- <i class="fas fa-home"></i> -->
-          🏠 Home
-        </a>
+        <a [routerLink]="['']"> 🏠 Home </a>
       </li>
       <li>
         <a routerLinkActive="active" [routerLink]="['/requestcourse']">
-          <!-- <i class="fas fa-briefcase"></i> -->
           📚 Request Course
         </a>
         <a routerLinkActive="active" [routerLink]="['/board']">
-          <!-- <i class="fas fa-copy"></i> -->
           🎯 Your Board
         </a>
       </li>
+
+      <li>
+        <a data-bs-toggle="modal" data-bs-target="#modal-form"> 💌 Contact </a>
+      </li>
       <!-- <li>
-        <a>
-          <i class="fas fa-image"></i>
-          Portfolio
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="fas fa-question"></i>
-          FAQ
-        </a>
-      </li> -->
-      <li>
-        <a data-bs-toggle="modal" data-bs-target="#modal-form">
-          <!-- <i class="fas fa-paper-plane"></i> -->
-          💌 Contact
-        </a>
-      </li>
-      <li>
         <a routerLinkActive="active" [routerLink]="['/createcourse']">
-          <!-- <i class="fas fa-copy"></i> -->
           🎯 Create Course
         </a>
-      </li>
+      </li> -->
     </ul>
-    
-    <!-- <ul class="list-unstyled CTAs">
-        <li>
-          <a (click)="loginwithGoogle()" class="text-dark bg-white"
-            >Signin with Google</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://bootstrapious.com/p/bootstrap-sidebar"
-            class="article"
-            >Back to article</a
-          >
-        </li>
-      </ul> -->
   </nav>
 
   <!-- Page Content  -->
@@ -91,14 +55,6 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="nav navbar-nav ml-auto">
-            <!-- <li class="nav-item">
-                <a class="nav-link">
-                  <span class="h5 wave">👋</span>
-                  <span class="h5 text-gradient text-dark"
-                    >Hey! {{ user.displayName }}</span
-                  >
-                </a>
-              </li> -->
             <li *ngIf="!user" class="nav-item">
               <a class="nav-link">
                 <button
@@ -137,14 +93,6 @@
 </div>
 
 <div class="col-md-4">
-  <!-- <button
-      type="button"
-      class="btn btn-block btn-default mb-3"
-      data-bs-toggle="modal"
-      data-bs-target="#modal-form"
-    >
-      Form
-    </button> -->
   <div
     class="modal fade"
     id="modal-form"
