--- a/src/app/components/request-course/request-course.component.html
+++ b/src/app/components/request-course/request-course.component.html
@@ -1,11 +1,20 @@
-<div class="container col-md-4 col-md-offset-4 centered" *ngIf="user; else userNotLoggedIn">
+<div
+  class="container col-md-4 col-md-offset-4 centered"
+  *ngIf="user; else userNotLoggedIn"
+>
   <form #formData="ngForm" (ngSubmit)="onSubmit(formData)">
     <div class="row justify-content-center">
       <div class="form-group col-md-4 col-md-offset-5 align-center">
         <label for="courseUrl" class="form-control-label"
           >Enter Course URL</label
         >
-        <input class="form-control" type="text" name="courseUrl" ngModel />
+        <input
+          class="form-control"
+          type="text"
+          name="courseUrl"
+          ngModel
+          required
+        />
         <button type="submit" class="btn bg-gradient-secondary mt-1">
           Submit
         </button>
@@ -28,13 +37,13 @@
   </form>
 </div> -->
 <ng-template #userNotLoggedIn>
-    <lottie-player
-      src="https://assets3.lottiefiles.com/packages/lf20_ymbzgxgc.json"
-      background="transparent"
-      class="d-flex mx-auto align-center"
-      speed="2"
-      style="width: 600px; height: 600px"
-      loop
-      autoplay
-    ></lottie-player>
+  <lottie-player
+    src="https://assets3.lottiefiles.com/packages/lf20_ymbzgxgc.json"
+    background="transparent"
+    class="d-flex mx-auto align-center"
+    speed="2"
+    style="width: 600px; height: 600px"
+    loop
+    autoplay
+  ></lottie-player>
 </ng-template>
