added course view and modal to view full course details

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -2,13 +2,7 @@
   <h5>Work in progress, Come again!</h5>
 </div>
 <ng-template #userNotLoggedIn>
-  <lottie-player
-    src="https://assets3.lottiefiles.com/packages/lf20_ymbzgxgc.json"
-    background="transparent"
-    class="d-flex mx-auto align-center"
-    speed="2"
-    style="width: 600px; height: 600px"
-    loop
-    autoplay
-  ></lottie-player>
+  <div class="container">
+    <img src="../../../assets/img/sign-up.png" alt="" class="rounded mx-auto d-block img-fluid">
+  </div>
 </ng-template>
