--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,8 +1,125 @@
-<div class="container" *ngIf="user; else userNotLoggedIn">
-  <h5>Work in progress, Come again!</h5>
+<div *ngIf="user; else userNotLoggedIn">
+  <div class="container">
+    <div class="row align-items-start">
+      <div class="col-sm border-radius-lg bg-light mr-1">
+        <h6 class="card-title text-uppercase text-truncate pl-2 pt-3">
+          <div class="status-red"></div>
+          To Do
+        </h6>
+        <div class="card mb-3" cdkDrag>
+          <div class="card-body p-3 mb-0">
+            <h5 class="mb-0">Module Name</h5>
+            <p class="text-muted small">
+              Module Description
+            </p>
+            <div class="author align-items-center">
+              <img
+                src="../../../assets/img/sign-up.png"
+                alt="..."
+                class="avatar rounded-circle"
+              />
+              <div class="name ps-3">
+                <span>Course Name</span>
+                <div class="stats">
+                  <small><i class="fas fa-user-shield mr-1"></i>
+                    <span> Author Name</span></small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card mb-3">
+          <div class="card-body p-3 mb-0">
+            <h5 class="mb-0">Module Name</h5>
+            <p class="text-muted small">
+              Module Description
+            </p>
+            <div class="author align-items-center">
+              <img
+                src="../../../assets/img/sign-up.png"
+                alt="..."
+                class="avatar rounded-circle"
+              />
+              <div class="name ps-3">
+                <span>Course Name</span>
+                <div class="stats">
+                  <small><i class="fas fa-user-shield mr-1"></i>
+                    <span> Author Name</span></small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm border-radius-lg bg-light ml-1 mr-1">
+        <h6 class="card-title text-uppercase text-truncate pl-2 pt-3">
+          <div class="status-blue"></div>
+          Doing
+        </h6>
+
+        <div class="card mb-3">
+          <div class="card-body p-3 mb-0">
+            <h5 class="mb-0">Module Name</h5>
+            <p class="text-muted small">
+              Module Description
+            </p>
+            <div class="author align-items-center">
+              <img
+                src="../../../assets/img/sign-up.png"
+                alt="..."
+                class="avatar rounded-circle"
+              />
+              <div class="name ps-3">
+                <span>Course Name</span>
+                <div class="stats">
+                  <small><i class="fas fa-user-shield mr-1"></i>
+                    <span> Author Name</span></small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm border-radius-lg bg-light ml-1">
+        <h6 class="card-title text-uppercase text-truncate pl-2 pt-3">
+          <div class="status-green"></div>
+          Done
+        </h6>
+
+        <div class="card mb-3">
+          <div class="card-body p-3 mb-0">
+            <h5 class="mb-0">Module Name</h5>
+            <p class="text-muted small">
+              Module Description
+            </p>
+            <div class="author align-items-center">
+              <img
+                src="../../../assets/img/sign-up.png"
+                alt="..."
+                class="avatar rounded-circle"
+              />
+              <div class="name ps-3">
+                <span>Course Name</span>
+                <div class="stats">
+                  <small><i class="fas fa-user-shield mr-1"></i>
+                    <span> Author Name</span></small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
 <ng-template #userNotLoggedIn>
   <div class="container">
-    <img src="../../../assets/img/sign-up.png" alt="" class="rounded mx-auto d-block img-fluid">
+    <img
+      src="../../../assets/img/sign-up.png"
+      alt=""
+      class="rounded mx-auto d-block img-fluid"
+    />
   </div>
 </ng-template>
